# healpix-plotting

./: .pre-commit-config.yaml  README.md  pixi.toml  pyproject.toml
.github/workflows/: main.yml  pypipublish.yml
docs/: conf.py
docs/tutorials/: index.md
healpix_plotting/: __init__.py  ellipsoid.py  healpix.py  plotting.py  resampling.py  sampling_grid.py
healpix_plotting/tests/: test_healpix.py  test_sampling_grid.py
