[project]
name = "healpix-plot"
requires-python = ">= 3.11"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
  "healpix-geo",
  "numpy>=2.3",
  "matplotlib",
  "cartopy",
  "numpy_groupies",
  "affine",
  "scipy",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools>=80.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["healpix_plot"]

[tool.setuptools_scm]
fallback_version = "9999"

[tool.coverage.run]
source = ["healpix_plot"]
branch = true
omit = []

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING"]


[tool.ruff]
builtins = ["ellipsis"]
exclude = [
  ".git",
  ".eggs",
  "build",
  "dist",
  "__pycache__",
  "docs",
]
target-version = "py313"

extend-include = ["*.ipynb"]
line-length = 100

[tool.ruff.lint]
select = [
  "F",   # Pyflakes
  "E",   # Pycodestyle
  "I",   # isort
  "UP",  # Pyupgrade
  "TID", # tidy imports
]
ignore = [
  "E402", # E402: module level import not at top of file
  "E501", # E501: line too long - let black worry about that
  "E731", # E731: do not assign a lambda expression, use a def
]
fixable = ["I", "TID252"]
extend-safe-fixes = [
  "TID252", # absolute imports
]


[tool.ruff.lint.isort]
known-first-party = ["healpix_plot"]
known-third-party = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
